--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
       <!---------------------------------------------------------------------------------------------------------------------------------------------------
     --------------------------------------------------------------------------Our Products---------------------------------------------------------------->
             <h1> Our Products</h1>
-            <section class="flavors"></section>
+            <section class="flavors">
             <h2>Flavors</h2>
            
            <!----------------Chipotle Cake Pop------------------------>
@@ -42,9 +42,9 @@
               <h3>Chipotle Cake Pop</h3>
               <div class="products-wrap"><!--Opens products-Wrap--><!--Opened this to display grid for 2 columns-->
                  <div class="products-container"> <!--Opened this to display 1 coulmn 3 rows inside the second column-->
-                     <img id="product" src="images/american-heritage-chocolate-TZFshUFzWRQ-unsplash (1).jpg" alt="Our Bakery">
+                     <img class="product" src="images/cakepop.jpg" alt="Our Bakery">
                  </div>
-                 <div class="products-container">
+                 <div class="products-container"> <!--Opens Product-container-->
                      <div><!--opened this to display columns inside the products-wrap-->
                          <h4>Ingredients</h4>
                              <ul>
@@ -64,6 +64,7 @@
                              <h4>Price</h4>
                                  <p>$10 Dolars</p>
                       </div>
+                </div><!--Closes open-container-->
              </div><!--Closes products-Wrap-->  
            </article>     
        
@@ -72,7 +73,7 @@
                 <h3>Sweet Sentiment</h3>
                  <div class="products-wrap"><!--Opens products-Wrap-->
                     <div class="products-container">
-                         <img id="product" src="images/anna-bratiychuk-UOiHPTEXT3Q-unsplash.jpg" alt="Our Bakery">
+                         <img class="product" src="images/anna-bratiychuk-UOiHPTEXT3Q-unsplash.jpg" alt="Our Bakery">
                     </div>
                     <div class="products-container">
                         <div>
@@ -99,11 +100,11 @@
             </article>
 
             <!-------------------------Rice Pop--------------------->
-            <article class="our-products"></article>
+            <article class="our-products">
                 <h3>Rice pop</h3>
                 <div class="products-wrap"><!--Opens products-Wrap-->
                     <div class="products-container">
-                        <img id="product" src="images/american-heritage-chocolate-uHHC3xS9u3o-unsplash.jpg" alt="Our Bakery">
+                        <img class="product" src="images/american-heritage-chocolate-uHHC3xS9u3o-unsplash.jpg" alt="Our Bakery">
                     </div>
                     <div class="products-container">
                         <div> 
@@ -134,7 +135,7 @@
                 <h3>Wild Strawberry</h3>
                  <div class="products-wrap"><!--Opens products-Wrap-->
                      <div class="products-container">
-                         <img id="product" src="images/showkat-chowdhury-I286SbaEm6Q-unsplash.jpg" alt="Our Bakery">
+                         <img class="product" src="images/showkat-chowdhury-I286SbaEm6Q-unsplash.jpg" alt="Our Bakery">
                      </div>
                      <div class="products-container">
                         <div> 
