--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="reviews"><!--Opens Reviews--><!--Opened this to display first grid-->
                     <div class="review-container"><!--Opens Review-container--><!--Opened this to display second grid inside the review (this is each review)-->
                     <div class="review-image">
-                    <img src="images/beautiful-woman-white-hair.jpg" alt="Client" class="people">
+                    <img src="images/beautiful-woman-white-hair.jpg" alt="Client Maria" class="people">
                     </div>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -96,7 +96,7 @@
                 
                 <div class="review-container"><!--Opens review-container-->
                     <div class="review-image">
-                    <img src="images/Seema-Kiran-Sajdeh.jpg" alt="Client" class="people">
+                    <img src="images/Seema-Kiran-Sajdeh.jpg" alt="Client Jennifer" class="people">
                 </div>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
