changes for accesibility

--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
         <div class="nav-container"><!--Open nav-container-->
         
              <div>
-                 <img src="images/logo.png" alt="Logo" class="logo"><!--This is to display in the same row nav ul and logo-->
+                 <img src="images/logo.png" alt="Our Logo" class="logo"><!--This is to display in the same row nav ul and logo-->
              </div>
              <nav>
                   <ul> 
