--- a/products.html
+++ b/products.html
@@ -18,10 +18,10 @@
         </div><!--Closes div for Logo-->
         <nav>
              <ul> 
-            <li><a href="index.html">Home</a></li>
-            <li> <a href="about.html">About Us</a></li>
-            <li><a href="products.html">Products </a></li>
-            <li><a href="services.html">Services </a></li>
+            <li><a href="index.html" aria-label="go to home Page">Home</a></li>
+            <li> <a href="about.html" aria-label="go to about page">About Us</a></li>
+            <li><a href="products.html" aria-current="page" aria-label="go to products page">Products </a></li>
+            <li><a href="services.html" aria-label="go to services page">Services </a></li>
         </ul>
     </nav>
 </div><!--Closes Nav-container-->
@@ -34,7 +34,7 @@
       <!---------------------------------------------------------------------------------------------------------------------------------------------------
     --------------------------------------------------------------------------Our Products---------------------------------------------------------------->
             <h1> Our Products</h1>
-            <section class="flavors">
+            <section role="region" class="flavors">
             <h2>Flavors</h2>
            
            <!----------------Chipotle Cake Pop------------------------>
@@ -162,12 +162,12 @@
              </article>
         </section> 
         <div class="button">
-            <a id="shopNowButton" href="services.html#contact">Shop Now</a>  
+            <a id="shopNowButton" href="services.html#contact" aria-label="go to contact us section">Shop Now</a>  
         </div>
     </main>
     <!---------------------------------------------------------------------------------------------------------------------------------------------
     -----------------------------------------------------------------------Footer------------------------------------------------------------------>
-    <footer>
+    <footer role="contentinfo">
       <p>  © 2023, Cake Up Bakery. All rights reserved.</p>
         <p>
         2065 Baseline Rd. Ottawa, ON K2G 6G4
