--- a/about.html
+++ b/about.html
@@ -10,17 +10,17 @@
 <body>
     <!----------------------------------------------------------------------------------------------------------------------------------------------------
     ----------------------------------------------------------------------------Header------------------------------------------------------------------>
-    <header>
+    <header role="banner">
        <div class="nav-container"> <!--Opens Nav-container-->
             <div><!--Opens div for Logo--> <!--This is to display in the same row nav ul and logo-->
                  <img src="images/logo.png" alt="Logo" class="logo">
              </div><!--Closes div for Logo-->
-            <nav>
+            <nav role="navigation">
                  <ul> 
-                    <li><a href="index.html">Home</a></li>
-                    <li> <a href="about.html">About Us</a></li>
-                    <li><a href="products.html">Products </a></li>
-                    <li><a href="services.html">Services </a></li>
+                    <li><a href="index.html" aria-label="go to home Page">Home</a></li>
+                    <li> <a href="about.html" aria-current="page" aria-label="go to about page">About Us</a></li>
+                    <li><a href="products.html" aria-label="go to products page">Products </a></li>
+                    <li><a href="services.html" aria-label="go to services page">Services </a></li>
                 </ul>
              </nav>
         </div><!--Closes Nav-container-->
@@ -33,7 +33,7 @@
         <h1>About Us</h1>
         <!-----------------------------------------------------------------------------------------------------------------------------------------------
         --------------------------------------------------------------------Our Story-------------------------------------------------------------------->
-        <section class="our-story">
+        <section role="region" class="our-story">
         <h2> Our story</h2>
     <div class="about-wrap"><!--Opens about-Wrap--> <!--Opened to display grid-->
         
@@ -65,12 +65,12 @@
             </div><!--Closes About-Wrap-->
 </section> 
 <div class="button">
-    <a id="shopNowButton" href="services.html#contact">Shop Now</a>  
+    <a id="shopNowButton" href="services.html#contact" aria-label="go to contact us section">Shop Now</a>  
 </div>
     </main>
     <!-----------------------------------------------------------------------------------------------------------------------------------------------
     ------------------------------------------------------------------Footer------------------------------------------------------------------------>
-    <footer>
+    <footer role="contentinfo">
       <p>  © 2023, Cake Up Bakery. All rights reserved.</p>
         <p>
             2065 Baseline Rd. Ottawa, ON K2G 6G4
