--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                     Faucibus a pellentesque sit amet. Nisi lacus sed viverra tellus.</p>
                 </div>
                 <div class="about-container"> 
-                         <img src="images/logo.png" alt="Our Logo">
+                         <img class="logomove" src="images/logo.png" alt="Our Logo">
                 </div>
                 <div class="about-container"> 
                           <img src="images/robert-bye-F2eHfMwIOxA-unsplash.jpg" alt="Our Store">
