--- a/services.html
+++ b/services.html
@@ -99,8 +99,8 @@
                     <input id="submit" type="submit" value="Submit">
                    </form>
             </div>
-            <div class="other-item">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.915753248035!2d-75.76873872390176!3d45.35051287107231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce072590b98b5f%3A0xf45ccb8343cd4941!2s2065%20Baseline%20Rd%2C%20Ottawa%2C%20ON%20K2C%200C8!5e0!3m2!1sen!2sca!4v1699651625220!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div itemscope itemtype="https://schema.org/LocalBusiness" class="other-item">
+                <iframe itemprop="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.915753248035!2d-75.76873872390176!3d45.35051287107231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce072590b98b5f%3A0xf45ccb8343cd4941!2s2065%20Baseline%20Rd%2C%20Ottawa%2C%20ON%20K2C%200C8!5e0!3m2!1sen!2sca!4v1699651625220!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
