add media query tablet

--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
     <main id="main">
       <!---------------------------------------------------------------------------------------------------------------------------------------------------
     --------------------------------------------------------------------------Our Products---------------------------------------------------------------->
-            <h1 itemscope itemtype="https://schema.org/Product"> Our Products</h1>
+            <h1 class= itemscope itemtype="https://schema.org/Product"> Our Products</h1>
             <section role="region" class="flavors">
             <h2>Flavors</h2>
            
