Add Media querys

--- a/products.html
+++ b/products.html
@@ -14,8 +14,8 @@
         <a href="#main" class="skip">Skip to Main content</a>
        <div class="nav-container"> <!--Opens Nav-container-->
        
-        <div itemscope itemtype="https://schema.org/LocalBusiness"><!--Opens div for Logo-->
-            <img itemprop="logo" src="images/logo.png" alt="Logo" class="logo">
+        <div class="logo" itemscope itemtype="https://schema.org/LocalBusiness"><!--Opens div for Logo-->
+            <img itemprop="logo" src="images/logo.png" alt="Logo" id="logo">
         </div><!--Closes div for Logo-->
         <nav>
              <ul> 
