--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <header itemscope itemtype="https://schema.org/LocalBusiness" role="banner">
         <a href="#main" class="skip">Skip to Main content</a>
        <div class="nav-container"> <!--Opens Nav-container-->
-            <div><!--Opens div for Logo--> <!--This is to display in the same row nav ul and logo-->
-                 <img itemprop="logo" src="images/logo.png" alt="Logo" class="logo">
+            <div class="logo"><!--Opens div for Logo--> <!--This is to display in the same row nav ul and logo-->
+                 <img itemprop="logo" src="images/logo.png" alt="Logo" id="logo">
              </div><!--Closes div for Logo-->
             <nav role="navigation">
                  <ul> 
