--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a href="#main" class="skip">Skip to Main content</a>
        <div class="nav-container"><!--Open nav-container-->
        
-            <div>
-                <img itemprop="logo" src="images/logo.png" alt="Logo" class="logo"><!--This is to display in the same row nav ul and logo-->
+            <div class="logo">
+                <img itemprop="logo" src="images/logo.png" alt="Logo" id="logo"><!--This is to display in the same row nav ul and logo-->
             </div>
             <nav role="navigation">
                  <ul> 
